# claude-codemode

./: .gitignore  README.md  demo.py  pyproject.toml  test_simple.py  test_tool.py
claude_codemode/: __init__.py  converter.py  core.py  runner.py  template.py  types.py
examples/: advanced_example.py  basic_example.py  claude_sdk_example.py  monkey_patch_example.py
