[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-codemode"
version = "0.1.4"
description = "Python implementation of Cloudflare's Code Mode using Claude AI, pydantic-ai, and Anthropic Agent SDK"
readme = "README.md"
requires-python = ">=3.10,<4.0"
license = {text = "MIT"}
authors = [
    {name = "Claude Codemode Contributors"}
]
keywords = ["ai", "claude", "pydantic-ai", "code-mode", "agent", "anthropic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
pydantic-ai = [
    "pydantic-ai>=1.0.0",
]
anthropic-sdk = [
    "claude-agent-sdk>=0.1.0",
]
all = [
    "pydantic-ai>=1.0.0",
    "claude-agent-sdk>=0.1.0",
    "anthropic>=0.69.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ryx2/claude-codemode"
Documentation = "https://github.com/ryx2/claude-codemode#readme"
Repository = "https://github.com/ryx2/claude-codemode"

[tool.setuptools.packages.find]
include = ["claude_codemode*"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
